# micraneft2

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
src/: clock.c  clock.h  g.c  g.h  log.c  log.h  main.c  screen.c  screen.h  terrain.c  terrain.h
